# honeypot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  config.toml  docker-compose.db.yml  docker-compose.yml  justfile
migrations/2023-08-10-065250_stats/: down.sql  up.sql
src/: config.rs  db.rs  handler.rs  main.rs  models.rs  response.rs  schema.rs  server.rs  templates.rs  webhook.rs
