[package]
name = "mc-honeypot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
azalea = { git = "https://github.com/mat-1/azalea" }
azalea-chat = { git = "https://github.com/mat-1/azalea" }
diesel = { version = "2.1.0", features = ["sqlite"] }
futures = "0.3.28"
serde = "1.0.178"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
