[package]
name = "mc-honeypot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
fastrand = "2.0.0"
futures = "0.3.28"
log = "0.4.19"
once_cell = "1.18.0"
rand = "0.8.5"
serde = { version = "<=1.0.171", features = ["derive"] }
serde_derive = "<=1.0.171"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
valence = { git = "https://github.com/valence-rs/valence" }
webhook = "2.1.2"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
